--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "evil_flowers_catalog"
 version = "0.1.0"
 description = "Simple books catalog compatible with OPDS 1.2 written in Python"
-authors = ["Arthur Dent <arthur.dent@backbone.sk>"]
+authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
@@ -16,6 +16,7 @@ psycopg2-binary = "^2.8.6"
 porcupine-python = "^0.2.0"
 django-imap-backend = "^0.2.3"
 requests = "^2.24.0"
+django-filter = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 fabric = "^2.5.0"
