--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,6 @@ python = "^3.9"
 django = "^3.1.1"
 django_api_forms = "^0.16.0"
 python-dotenv = "^0.14.0"
-django-enum-choices = "^2.1.2"
 argon2-cffi = "^20.1.0"
 sentry-sdk = "^0.17.6"
 psycopg2-binary = "^2.8.6"
@@ -20,6 +19,7 @@ django-filter = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 fabric = "^2.5.0"
+flake8 = "^3.8.4"
 
 [build-system]
 requires = ["poetry>=0.12"]
