--- a/docs/EvilFlowersCatalogApi.yaml
+++ b/docs/EvilFlowersCatalogApi.yaml
@@ -10,8 +10,8 @@ servers:
   - url: http://127.0.0.1:8000/api
     description: Local development server
 tags:
-- name: "Entries"
 - name: "Catalogs"
+- name: "Entries"
 - name: "Feeds"
 paths:
   /v1/catalogs:
@@ -155,6 +155,27 @@ paths:
           $ref: '#/components/responses/Forbidden'
         404:
           $ref: '#/components/responses/NotFound'
+  /v1/entries:
+    get:
+      tags:
+        - "Entries"
+      summary: Paginated and filterable list of of entries
+      responses:
+        '200':
+          description: Paginated list of entry objects
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  items:
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Entry'
+                  metadata:
+                    $ref: '#/components/schemas/Metadata'
+        401:
+          $ref: '#/components/responses/Unauthorized'
 components:
   securitySchemes:
     ApiKeyAuth:
