--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,12 +10,15 @@ django = "^3.1.1"
 django_api_forms = "^0.16.0"
 python-dotenv = "^0.14.0"
 argon2-cffi = "^20.1.0"
-sentry-sdk = "^0"
+sentry-sdk = "^1.0"
 psycopg2-binary = "^2.8.6"
 porcupine-python = "^0"
 django-imap-backend = "^0"
 requests = "^2.24.0"
 django-filter = "^2.4.0"
+django-celery-beat = "^2.2.0"
+redis = "^3.5.3"
+inotify = "^0.2.10"
 
 [tool.poetry.dev-dependencies]
 fabric = "^2.5.0"
