--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,16 @@
 services:
   db:
     image: postgres:13-alpine
+    volumes:
+      - ./data/evil_flowers_catalog/db:/var/lib/postgresql/data
     environment:
       - POSTGRES_DB=evil_flowers_catalog
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
   django:
     build: .
-    command: python manage.py runserver 0.0.0.0:8000
     volumes:
-      - .:/code
+      - .:/usr/local/app
     environment:
       - DATABASE_HOST=db
       - DATABASE_NAME=evil_flowers_catalog
