--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ django-filter = "^2.4.0"
 django-celery-beat = "^2.2.0"
 redis = "^3.5.3"
 idna = "2.10"
+Pillow = "^8.3.2"
 
 [tool.poetry.dev-dependencies]
 fabric = "^2.5.0"
