--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,9 @@ DATABASE_PASSWORD=admin
 BASE_URL=http://127.0.0.1:8000
 INSTANCE_NAME=MyInstanceName
 
+CELERY_BROKER_URL=redis://127.0.0.1:6379/0
+
+REDIS_HOST=127.0.0.1
+REDIS_DATABASE=1
+
 SENTRY_DSN=''
