New docker publish CI/CD (BuildKit)

--- a/.github/workflows/github-publish.yml
+++ b/.github/workflows/github-publish.yml
@@ -18,6 +18,7 @@ env:
   REGISTRY: ghcr.io
   # github.repository as <account>/<repo>
   IMAGE_NAME: ${{ github.repository }}
+  DOCKER_BUILDKIT: 1
 
 
 jobs:
