Celery replaced by basic CRON 🦆

--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -8,35 +8,11 @@ autostart=true
 autorestart=true
 priority=900
 
-[program:celerybeat]
+[program:cron]
 directory=/usr/src/app
-command=/root/.local/bin/celery -A evil_flowers_catalog beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
-numprocs=1
-stdout_logfile=/var/log/celerybeat.std.log
-stderr_logfile=/var/log/celerybeat.err.log
+command=crond -f
 autostart=true
 autorestart=true
-startsecs=10
-priority=100
-
-; Causes supervisor to send the termination signal (SIGTERM) to the whole process group.
-stopasgroup=true
-
-[program:celery]
-directory=/usr/src/app
-command=/root/.local/bin/celery -A evil_flowers_catalog worker -l DEBUG
-
-numprocs=1
-stdout_logfile=/var/log/worker.std.log
-stderr_logfile=/var/log/worker.err.log
-autostart=true
-autorestart=true
-startsecs=10
 priority=500
-
-; Need to wait for currently executing tasks to finish at shutdown.
-; Increase this if you have very long running tasks.
-stopwaitsecs = 600
-
-; Causes supervisor to send the termination signal (SIGTERM) to the whole process group.
-stopasgroup=true
+stdout_logfile=/var/log/cron.std.log
+stderr_logfile=/var/log/cron.err.log
