--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3"
 
 services:
   db:
-    image: postgres:13-alpine
+    image: postgres:14-alpine
     volumes:
       - ./data/db:/var/lib/postgresql/data
     environment:
@@ -30,11 +30,11 @@ services:
     depends_on:
       - db
   redis:
-    image: "redis:alpine"
+    image: "redis:6-alpine"
     command: redis-server
     ports:
      - "6379:6379"
     volumes:
-      - ./data/redis:/var/lib/redis
+      - ./data/redis:/data
     environment:
      - REDIS_REPLICATION_MODE=master
