--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,22 +8,22 @@ authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
 python = "^3.9"
 django = "^3.2.1"
 django_api_forms = "^0"
-python-dotenv = "^0.14.0"
-argon2-cffi = "^20.1.0"
+python-dotenv = "^0.19.0"
+argon2-cffi = "^21.0.0"
 sentry-sdk = "^1.0"
 psycopg2 = "^2.8.6"
 porcupine-python = "^0"
 django-imap-backend = "^0"
-requests = "^2.24.0"
-django-filter = "^2.4.0"
-django-celery-beat = "^2.2.0"
+django-filter = "^21.0"
 redis = "^3.5.3"
-idna = "2.10"
+idna = "3.3"
 Pillow = "^8.3.2"
+python-crontab = "^2.5.1"
+pycountry = "^20.7.3"
 
 [tool.poetry.dev-dependencies]
-fabric = "^2.5.0"
-flake8 = "^3.8.4"
+fabric = "^2.6.0"
+flake8 = "^4.0.0"
 
 [build-system]
 requires = ["poetry>=0.12"]
