Fixed alpine:3.15 container (using VIRTUAL_ENV hack) 🤪

--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -3,7 +3,7 @@ nodaemon=true
 
 [program:gunicorn]
 directory=/usr/src/app
-command=/root/.local/bin/gunicorn -b 0.0.0.0:8000 -w 4 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log
+command=/opt/venv/bin/gunicorn -b 0.0.0.0:8000 -w 4 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log
 autostart=true
 autorestart=true
 priority=900
