--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,8 +14,8 @@ services:
   django:
     build: .
     volumes:
-      - ./media:/usr/local/app/media
-      - ./private:/usr/local/app/private
+      - media_storage:/usr/local/app/media
+      - private_storage:/usr/local/app/private
       - ./logs:/var/log
     environment:
       - DATABASE_HOST=db
@@ -37,3 +37,6 @@ services:
       - ./data/redis:/data
     environment:
      - REDIS_REPLICATION_MODE=master
+volumes:
+  private_storage:
+  media_storage:
