--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,10 @@ REDIS_HOST=127.0.0.1
 REDIS_DATABASE=1
 
 SENTRY_DSN=''
+
+SECRET_KEY=''
+
+SECURED_VIEW_JWT_ALGORITHM=RS256
+SECURED_VIEW_JWK=
+SECURED_VIEW_JWT_ACCESS_TOKEN_EXPIRATION=5
+SECURED_VIEW_JWT_REFRESH_TOKEN_EXPIRATION=1440
