--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "evil_flowers_catalog"
-version = "0.4.0"
+version = "0.5.0"
 description = "Simple books catalog compatible with OPDS written in Python"
 authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
 
@@ -19,10 +19,13 @@ redis = "^4.0"
 Pillow = "^9.0"
 python-crontab = "^2.5.1"
 pycountry = "^22.0"
+django-object-checker = "^1.0.0"
+Authlib = "^0.15.5"
+tzdata = "^2021.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.0"
 
 [build-system]
-requires = ["poetry>=0.12"]
+requires = ["poetry>=1.0"]
 build-backend = "poetry.masonry.api"
