ISO languages & Authlib upgrade 🤪

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,22 +7,22 @@ authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.9"
 django = "^4.0.0"
-django_api_forms = "^0"
-python-dotenv = "^0.19.0"
-argon2-cffi = "^21.0.0"
+django_api_forms = "1.0.0rc2"
+python-dotenv = "^0.20.0"
+argon2-cffi = "^21.3.0"
 sentry-sdk = "^1.5"
-psycopg2 = "^2.8.6"
+psycopg2 = "^2.9"
 porcupine-python = "^0"
 django-imap-backend = "^0"
-django-filter = "^21.0"
-redis = "^4.0"
-Pillow = "^9.0"
-python-crontab = "^2.5.1"
-pycountry = "^22.0"
+django-filter = "^21.1"
+redis = "^4.3"
+Pillow = "^9.1"
+python-crontab = "^2.6.0"
+pycountry = "^22.3"
 django-object-checker = "^1.0.0"
-Authlib = "^0.15.5"
-tzdata = "^2021.5"
-django-cors-headers = "^3.11.0"
+Authlib = "^1"
+tzdata = "^2022.1"
+django-cors-headers = "^3.13.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.0"
