--- a/conf/supervisor.conf
+++ b/conf/supervisor.conf
@@ -1,6 +1,9 @@
 [supervisord]
 nodaemon=true
 
+[inet_http_server]
+port = 0.0.0.0:9001
+
 [program:gunicorn]
 directory=/usr/src/app
 command=/opt/venv/bin/gunicorn -b 0.0.0.0:8000 -w 4 evil_flowers_catalog.wsgi --log-level=debug --log-file=/var/log/gunicorn.log
