--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ argon2-cffi==21.3.0; python_version >= "3.6"
 asgiref==3.5.2; python_version >= "3.8"
 async-timeout==4.0.2; python_version >= "3.6"
 authlib==1.0.1
-certifi==2022.5.18.1; python_version >= "3.6"
+certifi==2022.6.15; python_version >= "3.6"
 cffi==1.15.0; python_version >= "3.6"
-cryptography==37.0.2; python_version >= "3.6"
+cryptography==37.0.3; python_version >= "3.6"
 deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 django-api-forms==1.0.0rc2
 django-cors-headers==3.13.0; python_version >= "3.7"
@@ -17,6 +17,8 @@ packaging==21.3; python_version >= "3.6"
 pillow==9.1.1; python_version >= "3.7"
 porcupine-python==0.5.0
 psycopg2==2.9.3; python_version >= "3.6"
+pyasn1-modules==0.2.8; python_version >= "3.6"
+pyasn1==0.4.8; python_version >= "3.6"
 pycountry==22.3.5; python_version >= "3.6" and python_version < "4"
 pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
 pydantic==1.7.4; python_version >= "3.6"
@@ -24,8 +26,9 @@ pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
 python-crontab==2.6.0
 python-dateutil==2.8.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 python-dotenv==0.20.0; python_version >= "3.5"
+python-ldap==3.4.0; python_version >= "3.6"
 redis==4.3.3; python_version >= "3.6"
-sentry-sdk==1.5.12
+sentry-sdk==1.6.0
 six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 sqlparse==0.4.2; python_version >= "3.8"
 tzdata==2022.1; python_version >= "2"
