--- a/docs/EvilFlowersCatalogApi.yaml
+++ b/docs/EvilFlowersCatalogApi.yaml
@@ -234,6 +234,7 @@ components:
           title: General
           created_at: '2021-02-21T19:05:35.538Z'
           updated_at: '2021-02-21T19:05:35.538Z'
+      title: ''
     CatalogForm:
       properties:
         url_name:
