--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ django-cors-headers==3.13.0; python_version >= "3.7"
 django-filter==21.1; python_version >= "3.6"
 django-imap-backend==0.2.3
 django-object-checker==1.0.2
-django==4.0.6; python_version >= "3.8"
+django==4.1; python_version >= "3.8"
 packaging==21.3; python_version >= "3.6"
 pillow==9.2.0; python_version >= "3.7"
 porcupine-python==0.5.0
@@ -28,9 +28,9 @@ python-dateutil==2.8.2; python_version >= "2.7" and python_full_version < "3.0.0
 python-dotenv==0.20.0; python_version >= "3.5"
 python-ldap==3.4.2; python_version >= "3.6"
 redis==4.3.4; python_version >= "3.6"
-sentry-sdk==1.7.2
+sentry-sdk==1.9.5
 six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
 sqlparse==0.4.2; python_version >= "3.8"
-tzdata==2022.1; python_version >= "2"
-urllib3==1.26.10; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4"
+tzdata==2022.2; python_version >= "2"
+urllib3==1.26.11; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
 wrapt==1.14.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
