--- a/requirements.txt
+++ b/requirements.txt
@@ -1,36 +1,37 @@
-argon2-cffi-bindings==21.2.0; python_version >= "3.6"
-argon2-cffi==21.3.0; python_version >= "3.6"
-asgiref==3.5.2; python_version >= "3.8"
-async-timeout==4.0.2; python_version >= "3.6"
-authlib==1.0.1
-certifi==2022.6.15; python_version >= "3.6"
-cffi==1.15.1; python_version >= "3.6"
-cryptography==37.0.4; python_version >= "3.6"
-deprecated==1.2.13; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-django-api-forms==1.0.0rc2
-django-cors-headers==3.13.0; python_version >= "3.7"
-django-filter==21.1; python_version >= "3.6"
-django-imap-backend==0.2.3
-django-object-checker==1.0.2
-django==4.1; python_version >= "3.8"
-packaging==21.3; python_version >= "3.6"
-pillow==9.2.0; python_version >= "3.7"
-porcupine-python==0.5.0
-psycopg2==2.9.3; python_version >= "3.6"
-pyasn1-modules==0.2.8; python_version >= "3.6"
-pyasn1==0.4.8; python_version >= "3.6"
-pycountry==22.3.5; python_version >= "3.6" and python_version < "4"
-pycparser==2.21; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.4.0" and python_version >= "3.6"
-pydantic==1.7.4; python_version >= "3.6"
-pyparsing==3.0.9; python_full_version >= "3.6.8" and python_version >= "3.6"
-python-crontab==2.6.0
-python-dateutil==2.8.2; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
-python-dotenv==0.20.0; python_version >= "3.5"
-python-ldap==3.4.2; python_version >= "3.6"
-redis==4.3.4; python_version >= "3.6"
-sentry-sdk==1.9.5
-six==1.16.0; python_version >= "2.7" and python_full_version < "3.0.0" or python_full_version >= "3.3.0"
-sqlparse==0.4.2; python_version >= "3.8"
-tzdata==2022.2; python_version >= "2"
-urllib3==1.26.11; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.6.0" and python_version < "4" and python_version >= "3.6"
-wrapt==1.14.1; python_version >= "3.6" and python_full_version < "3.0.0" or python_full_version >= "3.5.0" and python_version >= "3.6"
+argon2-cffi-bindings==21.2.0 ; python_version >= "3.9" and python_version < "4.0"
+argon2-cffi==21.3.0 ; python_version >= "3.9" and python_version < "4.0"
+asgiref==3.5.2 ; python_version >= "3.9" and python_version < "4.0"
+async-timeout==4.0.2 ; python_version >= "3.9" and python_version < "4.0"
+authlib==1.0.1 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2022.6.15 ; python_version >= "3.9" and python_version < "4.0"
+cffi==1.15.1 ; python_version >= "3.9" and python_version < "4.0"
+cryptography==38.0.1 ; python_version >= "3.9" and python_version < "4.0"
+deprecated==1.2.13 ; python_version >= "3.9" and python_version < "4.0"
+django-api-forms==1.0.0rc4 ; python_version >= "3.9" and python_version < "4.0"
+django-cors-headers==3.13.0 ; python_version >= "3.9" and python_version < "4.0"
+django-filter==21.1 ; python_version >= "3.9" and python_version < "4.0"
+django-imap-backend==0.2.3 ; python_version >= "3.9" and python_version < "4.0"
+django-object-checker==1.0.2 ; python_version >= "3.9" and python_version < "4.0"
+django==4.1.1 ; python_version >= "3.9" and python_version < "4.0"
+packaging==21.3 ; python_version >= "3.9" and python_version < "4.0"
+pillow==9.2.0 ; python_version >= "3.9" and python_version < "4.0"
+porcupine-python==0.5.0 ; python_version >= "3.9" and python_version < "4.0"
+psycopg2==2.9.3 ; python_version >= "3.9" and python_version < "4.0"
+pyasn1-modules==0.2.8 ; python_version >= "3.9" and python_version < "4.0"
+pyasn1==0.4.8 ; python_version >= "3.9" and python_version < "4.0"
+pycountry==22.3.5 ; python_version >= "3.9" and python_version < "4"
+pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0"
+pydantic==1.7.4 ; python_version >= "3.9" and python_version < "4.0"
+pyparsing==3.0.9 ; python_version >= "3.9" and python_version < "4.0"
+python-crontab==2.6.0 ; python_version >= "3.9" and python_version < "4.0"
+python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
+python-dotenv==0.20.0 ; python_version >= "3.9" and python_version < "4.0"
+python-ldap==3.4.2 ; python_version >= "3.9" and python_version < "4.0"
+redis==4.3.4 ; python_version >= "3.9" and python_version < "4.0"
+sentry-sdk==1.9.8 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==65.3.0 ; python_version >= "3.9" and python_version < "4"
+six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
+sqlparse==0.4.2 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2022.2 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==1.26.12 ; python_version >= "3.9" and python_version < "4"
+wrapt==1.14.1 ; python_version >= "3.9" and python_version < "4.0"
