--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,20 +8,20 @@ authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
 python = "^3.9"
 django = "^4.0.0"
 django_api_forms = "1.0.0rc4"
-python-dotenv = "^0.20.0"
+python-dotenv = "^0.21.0"
 argon2-cffi = "^21.3.0"
 sentry-sdk = "^1.5"
 psycopg2 = "^2.9"
 porcupine-python = "^0"
 django-imap-backend = "^0"
-django-filter = "^21.1"
+django-filter = "^22.1"
 redis = "^4.3"
-Pillow = "^9.1"
+Pillow = "^9.2"
 python-crontab = "^2.6.0"
 pycountry = "^22.3"
 django-object-checker = "^1.0.0"
 Authlib = "^1"
-tzdata = "^2022.1"
+tzdata = "^2022.4"
 django-cors-headers = "^3.13.0"
 python-ldap = "^3.4.0"
 
@@ -29,5 +29,5 @@ python-ldap = "^3.4.0"
 flake8 = "^4.0.0"
 
 [build-system]
-requires = ["poetry>=1.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.masonry.api"
