Storage drivers & removed soft delete 🛡️

--- a/.env.example
+++ b/.env.example
@@ -18,3 +18,13 @@ SECURED_VIEW_JWT_ALGORITHM=RS256
 SECURED_VIEW_JWK=
 SECURED_VIEW_JWT_ACCESS_TOKEN_EXPIRATION=5
 SECURED_VIEW_JWT_REFRESH_TOKEN_EXPIRATION=1440
+
+STORAGE_DRIVER=apps.files.storage.filesystem.FileSystemStorage
+
+STORAGE_FILESYSTEM_DATADIR=/mnt/data
+
+STORAGE_S3_HOST=127.0.0.1
+STORAGE_S3_ACCESS_KEY=O8TgsPCaWvzvl6xR
+STORAGE_S3_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
+STORAGE_S3_SECURE=False
+STORAGE_S3_BUCKET=evilflowers
