--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,27 +6,31 @@ authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-django = "^4.0.0"
-django_api_forms = "1.0.0rc4"
+django = "^4.1.0"
+django_api_forms = "1.0.0rc7"
 python-dotenv = "^0.21.0"
 argon2-cffi = "^21.3.0"
-sentry-sdk = "^1.5"
+sentry-sdk = "^1.11"
 psycopg2 = "^2.9"
 porcupine-python = "^0"
 django-imap-backend = "^0"
 django-filter = "^22.1"
-redis = "^4.3"
+redis = "^4.4"
 Pillow = "^9.2"
 python-crontab = "^2.6.0"
 pycountry = "^22.3"
 django-object-checker = "^1.0.0"
 Authlib = "^1"
-tzdata = "^2022.4"
+tzdata = "^2022.7"
 django-cors-headers = "^3.13.0"
 python-ldap = "^3.4.0"
+minio = { version = "^7.1.12", optional = true }
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.0"
+
+[tool.poetry.extras]
+s3 = ["minio"]
 
 [build-system]
 requires = ["poetry-core"]
