--- a/requirements.txt
+++ b/requirements.txt
@@ -2,17 +2,17 @@ argon2-cffi-bindings==21.2.0 ; python_version >= "3.9" and python_version < "4.0
 argon2-cffi==21.3.0 ; python_version >= "3.9" and python_version < "4.0"
 asgiref==3.5.2 ; python_version >= "3.9" and python_version < "4.0"
 async-timeout==4.0.2 ; python_version >= "3.9" and python_version < "4.0"
-authlib==1.1.0 ; python_version >= "3.9" and python_version < "4.0"
-certifi==2022.9.24 ; python_version >= "3.9" and python_version < "4.0"
+authlib==1.2.0 ; python_version >= "3.9" and python_version < "4.0"
+certifi==2022.12.7 ; python_version >= "3.9" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.9" and python_version < "4.0"
-cryptography==38.0.3 ; python_version >= "3.9" and python_version < "4.0"
-django-api-forms==1.0.0rc4 ; python_version >= "3.9" and python_version < "4.0"
+cryptography==38.0.4 ; python_version >= "3.9" and python_version < "4.0"
+django-api-forms==1.0.0rc7 ; python_version >= "3.9" and python_version < "4.0"
 django-cors-headers==3.13.0 ; python_version >= "3.9" and python_version < "4.0"
 django-filter==22.1 ; python_version >= "3.9" and python_version < "4.0"
 django-imap-backend==0.2.3 ; python_version >= "3.9" and python_version < "4.0"
 django-object-checker==1.0.2 ; python_version >= "3.9" and python_version < "4.0"
-django==4.1.3 ; python_version >= "3.9" and python_version < "4.0"
-packaging==21.3 ; python_version >= "3.9" and python_version < "4.0"
+django==4.1.4 ; python_version >= "3.9" and python_version < "4.0"
+minio==7.1.12 ; python_version >= "3.9" and python_version < "4.0"
 pillow==9.3.0 ; python_version >= "3.9" and python_version < "4.0"
 porcupine-python==0.5.0 ; python_version >= "3.9" and python_version < "4.0"
 psycopg2==2.9.5 ; python_version >= "3.9" and python_version < "4.0"
@@ -21,15 +21,14 @@ pyasn1==0.4.8 ; python_version >= "3.9" and python_version < "4.0"
 pycountry==22.3.5 ; python_version >= "3.9" and python_version < "4"
 pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0"
 pydantic==1.7.4 ; python_version >= "3.9" and python_version < "4.0"
-pyparsing==3.0.9 ; python_version >= "3.9" and python_version < "4.0"
 python-crontab==2.6.0 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
 python-dotenv==0.21.0 ; python_version >= "3.9" and python_version < "4.0"
 python-ldap==3.4.3 ; python_version >= "3.9" and python_version < "4.0"
-redis==4.3.5 ; python_version >= "3.9" and python_version < "4.0"
+redis==4.4.0 ; python_version >= "3.9" and python_version < "4.0"
 sentry-sdk==1.11.1 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==65.6.0 ; python_version >= "3.9" and python_version < "4"
+setuptools==65.6.3 ; python_version >= "3.9" and python_version < "4"
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
 sqlparse==0.4.3 ; python_version >= "3.9" and python_version < "4.0"
-tzdata==2022.6 ; python_version >= "3.9" and python_version < "4.0"
-urllib3==1.26.12 ; python_version >= "3.9" and python_version < "4"
+tzdata==2022.7 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==1.26.13 ; python_version >= "3.9" and python_version < "4.0"
