--- a/docs/EvilFlowersCatalogApi.yaml
+++ b/docs/EvilFlowersCatalogApi.yaml
@@ -12,15 +12,15 @@ info:
     url: 'https://jakubdubec.me'
     email: jakub.dubec@gmail.com
 servers:
-  - url: 'http://127.0.0.1:8000/api'
+  - url: 'http://127.0.0.1:8000'
     description: Local development server
 tags:
   - name: Catalogs
   - name: Entries
-  - name: Data
   - name: Feeds
+  - name: User acquisitions
 paths:
-  /v1/catalogs:
+  /api/v1/catalogs:
     get:
       tags:
         - Catalogs
@@ -111,7 +111,8 @@ paths:
           $ref: '#/components/responses/CatalogValidation'
       operationId: createCatalog
       description: Create a new OPDS catalog.
-  '/v1/catalogs/{catalogId}':
+    parameters: []
+  '/api/v1/catalogs/{catalogId}':
     parameters:
       - in: path
         name: catalogId
@@ -171,7 +172,7 @@ paths:
           $ref: '#/components/responses/NotFound'
       operationId: deleteCatalog
       description: Hard-delete of the OPDS catalog.
-  '/v1/catalogs/{catalogId}/user-acquisitions':
+  '/api/v1/catalogs/{catalogId}/user-acquisitions':
     parameters:
       - in: path
         name: catalogId
@@ -182,7 +183,7 @@ paths:
         description: UUID of the catalog object
     post:
       tags:
-        - Catalogs
+        - User acquisitions
       summary: Create catalog entry
       requestBody:
         $ref: '#/components/requestBodies/UserAcquisitionBody'
@@ -197,7 +198,7 @@ paths:
           $ref: '#/components/responses/CatalogValidation'
       operationId: createUserAcquisition
       description: Create a new user acquisition pair.
-  '/v1/catalogs/{catalogId}/user-acquisitions/{user-acquisitionId}':
+  '/api/v1/catalogs/{catalogId}/user-acquisitions/{userAcquisitionId}':
     parameters:
       - in: path
         name: catalogId
@@ -207,7 +208,7 @@ paths:
         required: true
         description: UUID of the catalog object
       - in: path
-        name: user-acquisitionId
+        name: userAcquisitionId
         schema:
           type: string
           format: uuid
@@ -216,7 +217,7 @@ paths:
     get:
       summary: Retrieve information about user acquisition pair
       tags:
-        - Catalogs
+        - User acquisitions
       responses:
         '200':
           $ref: '#/components/responses/UserAcquisitionDetail'
@@ -226,12 +227,14 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-      description: Detail user acquisition object retreival.
+      description: Detail user acquisition object retrieval.
       operationId: getUserAcquisition
     put:
-      summary: Update user acquisition pair
+      operationId: updateUserAcquisition
+      summary: Update user acquisition
+      description: Update user acquisition
       tags:
-        - Catalogs
+        - User acquisitions
       requestBody:
         $ref: '#/components/requestBodies/UserAcquisitionBody'
       responses:
@@ -243,11 +246,9 @@ paths:
           $ref: '#/components/responses/Forbidden'
         '404':
           $ref: '#/components/responses/NotFound'
-        '409':
-          $ref: '#/components/responses/Conflict'
         '422':
           $ref: '#/components/responses/UserAcquisitionValidation'
-  /v1/entries:
+  /api/v1/entries:
     get:
       tags:
         - Entries
@@ -270,7 +271,8 @@ paths:
           $ref: '#/components/responses/Unauthorized'
       operationId: getEntry
       description: 'List of all available entries with filter and pagination (by default, entries are listed for all available catalogs).'
-  /v1/catalogs/{catalogId}/entries/{entryId}/citations:
+    parameters: []
+  '/api/v1/catalogs/{catalogId}/entries/{entryId}/citation':
     parameters:
       - in: path
         name: catalogId
@@ -307,7 +309,7 @@ paths:
           $ref: '#/components/responses/NotFound'
       operationId: getCitation
       description: Retrieves citation object in the CSL-JSON format used to create BiBTeX citation.
-  /data/user-acquistions/{user-acquisitionId}:
+  '/data/user-acquistions/{user-acquisitionId}':
     parameters:
       - in: path
         name: user-acquisitionId
@@ -325,11 +327,12 @@ paths:
         description: page of the requested document
     get:
       tags:
-        - Data
-      summary: Retrieve document in PDF format.
+        - User acquisitions
+      summary: Retrieve user acquisition document
       responses:
         '200':
-          $ref: '#/components/responses/RetrievedDocument'
+          description: OK
+          headers: {}
         '401':
           $ref: '#/components/responses/Unauthorized'
         '403':
@@ -337,7 +340,13 @@ paths:
         '404':
           $ref: '#/components/responses/NotFound'
       operationId: getData
-      description: Retrieve document in PDF format, either whole or by pages.
+      description: Retrieve document in binary. Content-type is according to the user acquisition type. There is a posibility to retreive only specified page using `page` query parameter.
+      parameters:
+        - schema:
+            type: integer
+          in: query
+          name: page
+          description: Page number
 components:
   securitySchemes:
     apiKeyAuth:
@@ -381,48 +390,48 @@ components:
           updated_at: '2021-02-21T19:05:35.538Z'
       title: ''
     UserAcquisition:
-      properties:
-        id:
-          type: string
-          format: uuid
-          example: 13e7c89c-2cb0-494a-bfac-72f52300d62f
-        created_at:
-          type: string
-          format: date-time
-          example: '2021-02-21T19:05:35.538Z'
-        acquisition_id:
-          type: string
-          format: uuid
-          example: 0d87f6d9-4f11-406c-a712-58c9bf169682
-        user_id:
-          type: string
-          format: uuid
-          example: 0d87f6d9-4f11-406c-a712-58c9bf169682  
-        type:
-          type: string
-          example: share
-        expire_at:
-          type: string
-          format: date-time
-          example: '2021-02-21T19:05:35.538Z'
-        share_page_range:
-          type: number
-          format: int4multirange
-          example: "{[1,4],[6,10]}"
-        url:
-          type: string
-          example: https://elvira.fiit.stuba.sk/share/66239ec0-5c02-42de-b042-7bf9f99dd713
+      type: object
       x-examples:
-        General example:
+        Example 1:
           id: 13e7c89c-2cb0-494a-bfac-72f52300d62f
           created_at: '2021-02-21T19:05:35.538Z'
           acquisition_id: 0d87f6d9-4f11-406c-a712-58c9bf169682
           user_id: 0d87f6d9-4f11-406c-a712-58c9bf168718
           type: share
           expire_at: '2021-02-21T19:05:35.538Z'
-          share_page_range: "{[1,4],[6,10]}"
-          url: https://elvira.fiit.stuba.sk/share/13e7c89c-2cb0-494a-bfac-72f52300d62f
-      title: ''
+          range: '{[1,4],[6,10]}'
+          url: 'https://elvira.fiit.stuba.sk/share/13e7c89c-2cb0-494a-bfac-72f52300d62f'
+          annotations: ''
+      properties:
+        id:
+          type: string
+          format: uuid
+        created_at:
+          type: string
+          format: date-time
+        acquisition_id:
+          type: string
+          format: uuid
+        user_id:
+          type: string
+          format: uuid
+        type:
+          type: string
+          enum:
+            - shared
+            - personal
+        expire_at:
+          type: string
+          format: date-time
+        range:
+          type: string
+        url:
+          type: string
+          format: uri
+        annotations:
+          format: xml
+          type: string
+          nullable: true
     CatalogForm:
       properties:
         url_name:
@@ -440,7 +449,7 @@ components:
         user_id:
           type: string
           format: uuid
-          example: 0d87f6d9-4f11-406c-a712-58c9bf169682  
+          example: 0d87f6d9-4f11-406c-a712-58c9bf169682
         type:
           type: string
           example: share
@@ -449,59 +458,45 @@ components:
           format: date-time
           example: '2021-02-21T19:05:35.538Z'
         share_page_range:
-          type: number
+          type: string
           format: int4multirange
-          example: "{[1,4],[6,10]}"
+          example: '{[1,4],[6,10]}'
         url:
           type: string
-          example: https://elvira.fiit.stuba.sk/share/66239ec0-5c02-42de-b042-7bf9f99dd713
+          example: 'https://elvira.fiit.stuba.sk/share/66239ec0-5c02-42de-b042-7bf9f99dd713'
+      title: ''
     Citation:
-        type: object
-        properties:
-          id:
-            type: string
-            format: uri
-            example: http://example.org/id/1234
-          type:
-            type: string
-            example: book
-          title:
-            type: string
-            example: Schloss
-          publisher:
-            type: string
-            example: Wolff
-          publisher-place:
-            type: string
-            example: München
-          language:
-            type: string
-            example: de
-          author:
-            type: array
-            items:
-                properties:
-                  family:
-                    type: string
-                    example: "Kafka"
-                  given:
-                    type: string
-                    example: "Franz"
-    Document:
       type: object
       properties:
-        1: 
+        id:
           type: string
-          example: page1.pdf
-        2: 
+          format: uri
+          example: 'http://example.org/id/1234'
+        type:
           type: string
-          example: null
-        3: 
+          example: book
+        title:
           type: string
-          example: page3.pdf
-        4: 
+          example: Schloss
+        publisher:
           type: string
-          example: page4.pdf
+          example: Wolff
+        publisher-place:
+          type: string
+          example: München
+        language:
+          type: string
+          example: de
+        author:
+          type: array
+          items:
+            properties:
+              family:
+                type: string
+                example: Kafka
+              given:
+                type: string
+                example: Franz
     Metadata:
       properties:
         page:
@@ -810,15 +805,6 @@ components:
             properties:
               response:
                 $ref: '#/components/schemas/Citation'
-    RetrievedDocument:
-      description: Response object with document pages with binaries inside
-      content:
-        application/json:
-          schema:
-            type: object
-            properties:
-              response:
-                $ref: '#/components/schemas/Document'
   requestBodies:
     CatalogBody:
       description: A JSON object containing catalog information
