--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,13 +24,17 @@ Authlib = "^1"
 tzdata = "^2022.7"
 django-cors-headers = "^3.13.0"
 python-ldap = "^3.4.0"
+PyPDF2 = { version = "^2.12.1", optional = true }
+fpdf2 = { version = "^2.6.0", optional = true }
 minio = { version = "^7.1.12", optional = true }
+qrcode = "^7.3.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^4.0.0"
 
 [tool.poetry.extras]
 s3 = ["minio"]
+pdf = ["PyPDF2", "fpdf2"]
 
 [build-system]
 requires = ["poetry-core"]
