Dependencies for PDF modifiers 🧕🏽

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,5 @@ STORAGE_S3_ACCESS_KEY=O8TgsPCaWvzvl6xR
 STORAGE_S3_SECRET_KEY=fpVFOivTa1NlPcBcKbCp8EGHaJe5m2Oq
 STORAGE_S3_SECURE=False
 STORAGE_S3_BUCKET=evilflowers
+
+CONTACT_EMAIL=arthur.dent@example.com
