--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,35 +6,35 @@ authors = ["Jakub Dubec <jakub.dubec@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.9"
-django = "^4.1.0"
-django_api_forms = "1.0.0rc7"
-python-dotenv = "^0.21.0"
+django = "^4.2.0"
+django_api_forms = "1.0.0rc9"
+python-dotenv = "^1.0"
 argon2-cffi = "^21.3.0"
-sentry-sdk = "^1.11"
-psycopg2 = "^2.9"
+sentry-sdk = "^1.19"
+psycopg = {version = "^3.1", extras = ["c"]}
 porcupine-python = "^0"
 django-imap-backend = "^0"
-django-filter = "^22.1"
-redis = "^4.4"
-Pillow = "^9.2"
-python-crontab = "^2.6.0"
+django-filter = "^23.1"
+redis = "^4.5"
+Pillow = "^9.5"
+python-crontab = "^2.7"
 pycountry = "^22.3"
 django-object-checker = "^1.0.0"
-Authlib = "^1"
-tzdata = "^2022.7"
-django-cors-headers = "^3.13.0"
+Authlib = "^1.2"
+tzdata = "^2023.3"
+django-cors-headers = "^3.14"
 python-ldap = "^3.4.0"
-PyPDF2 = { version = "^2.12.1", optional = true }
-fpdf2 = { version = "^2.6.0", optional = true }
+pypdf = { version = "^3.7", optional = true }
+fpdf2 = { version = "^2.7", optional = true }
 minio = { version = "^7.1.12", optional = true }
-qrcode = "^7.3.1"
+qrcode = "^7.4"
 
 [tool.poetry.dev-dependencies]
-flake8 = "^4.0.0"
+flake8 = "^6.0"
 
 [tool.poetry.extras]
 s3 = ["minio"]
-pdf = ["PyPDF2", "fpdf2"]
+pdf = ["pypdf", "fpdf2"]
 
 [build-system]
 requires = ["poetry-core"]
