--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,43 @@
 argon2-cffi-bindings==21.2.0 ; python_version >= "3.9" and python_version < "4.0"
 argon2-cffi==21.3.0 ; python_version >= "3.9" and python_version < "4.0"
 asgiref==3.6.0 ; python_version >= "3.9" and python_version < "4.0"
-async-timeout==4.0.2 ; python_version >= "3.9" and python_version < "4.0"
+async-timeout==4.0.2 ; python_version >= "3.9" and python_version <= "3.11.2"
 authlib==1.2.0 ; python_version >= "3.9" and python_version < "4.0"
 certifi==2022.12.7 ; python_version >= "3.9" and python_version < "4.0"
 cffi==1.15.1 ; python_version >= "3.9" and python_version < "4.0"
 colorama==0.4.6 ; python_version >= "3.9" and python_version < "4.0" and platform_system == "Windows"
-cryptography==39.0.1 ; python_version >= "3.9" and python_version < "4.0"
+cryptography==40.0.1 ; python_version >= "3.9" and python_version < "4.0"
 defusedxml==0.7.1 ; python_version >= "3.9" and python_version < "4.0"
-django-api-forms==1.0.0rc7 ; python_version >= "3.9" and python_version < "4.0"
-django-cors-headers==3.13.0 ; python_version >= "3.9" and python_version < "4.0"
-django-filter==22.1 ; python_version >= "3.9" and python_version < "4.0"
+django-api-forms==1.0.0rc9 ; python_version >= "3.9" and python_version < "4.0"
+django-cors-headers==3.14.0 ; python_version >= "3.9" and python_version < "4.0"
+django-filter==23.1 ; python_version >= "3.9" and python_version < "4.0"
 django-imap-backend==0.2.3 ; python_version >= "3.9" and python_version < "4.0"
 django-object-checker==1.0.2 ; python_version >= "3.9" and python_version < "4.0"
-django==4.1.6 ; python_version >= "3.9" and python_version < "4.0"
-fonttools==4.38.0 ; python_version >= "3.9" and python_version < "4.0"
-fpdf2==2.6.1 ; python_version >= "3.9" and python_version < "4.0"
-minio==7.1.13 ; python_version >= "3.9" and python_version < "4.0"
-pillow==9.4.0 ; python_version >= "3.9" and python_version < "4.0"
+django==4.2 ; python_version >= "3.9" and python_version < "4.0"
+fonttools==4.39.3 ; python_version >= "3.9" and python_version < "4.0"
+fpdf2==2.7.3 ; python_version >= "3.9" and python_version < "4.0"
+minio==7.1.14 ; python_version >= "3.9" and python_version < "4.0"
+pillow==9.5.0 ; python_version >= "3.9" and python_version < "4.0"
 porcupine-python==0.5.0 ; python_version >= "3.9" and python_version < "4.0"
-psycopg2==2.9.5 ; python_version >= "3.9" and python_version < "4.0"
+psycopg-c==3.1.8 ; python_version >= "3.9" and python_version < "4.0"
+psycopg[c]==3.1.8 ; python_version >= "3.9" and python_version < "4.0"
 pyasn1-modules==0.2.8 ; python_version >= "3.9" and python_version < "4.0"
 pyasn1==0.4.8 ; python_version >= "3.9" and python_version < "4.0"
 pycountry==22.3.5 ; python_version >= "3.9" and python_version < "4"
 pycparser==2.21 ; python_version >= "3.9" and python_version < "4.0"
 pydantic==1.7.4 ; python_version >= "3.9" and python_version < "4.0"
-pypdf2==2.12.1 ; python_version >= "3.9" and python_version < "4.0"
+pypdf==3.7.0 ; python_version >= "3.9" and python_version < "4.0"
 pypng==0.20220715.0 ; python_version >= "3.9" and python_version < "4.0"
 python-crontab==2.7.1 ; python_version >= "3.9" and python_version < "4.0"
 python-dateutil==2.8.2 ; python_version >= "3.9" and python_version < "4.0"
-python-dotenv==0.21.1 ; python_version >= "3.9" and python_version < "4.0"
+python-dotenv==1.0.0 ; python_version >= "3.9" and python_version < "4.0"
 python-ldap==3.4.3 ; python_version >= "3.9" and python_version < "4.0"
 qrcode==7.4.2 ; python_version >= "3.9" and python_version < "4.0"
-redis==4.5.1 ; python_version >= "3.9" and python_version < "4.0"
-sentry-sdk==1.15.0 ; python_version >= "3.9" and python_version < "4.0"
-setuptools==67.2.0 ; python_version >= "3.9" and python_version < "4"
+redis==4.5.4 ; python_version >= "3.9" and python_version < "4.0"
+sentry-sdk==1.19.0 ; python_version >= "3.9" and python_version < "4.0"
+setuptools==67.6.1 ; python_version >= "3.9" and python_version < "4"
 six==1.16.0 ; python_version >= "3.9" and python_version < "4.0"
 sqlparse==0.4.3 ; python_version >= "3.9" and python_version < "4.0"
-typing-extensions==4.4.0 ; python_version >= "3.9" and python_version < "4.0"
-tzdata==2022.7 ; python_version >= "3.9" and python_version < "4.0"
-urllib3==1.26.14 ; python_version >= "3.9" and python_version < "4.0"
+typing-extensions==4.5.0 ; python_version >= "3.9" and python_version < "4.0"
+tzdata==2023.3 ; python_version >= "3.9" and python_version < "4.0"
+urllib3==1.26.15 ; python_version >= "3.9" and python_version < "4.0"
